<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            android:layout_marginTop="32dp"
            android:background="#ffffff"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/map_company_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:textColor="#333333"
                    android:textSize="14sp"/>

                <TextView
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="联系人："
                    android:textSize="14sp"
                    android:textColor="#333333"/>


                <TextView
                    android:visibility="gone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/map_company_people"
                    android:textSize="14sp"
                    android:textColor="#333333"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginTop="4dp">

                <TextView
                    android:id="@+id/map_company_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:textColor="#999999"
                    android:layout_weight="3"
                    android:textSize="12sp"/>

                <TextView
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="电话："
                    android:textSize="14sp"
                    android:textColor="#333333"/>


                <TextView
                    android:visibility="gone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/map_company_phone"
                    android:textSize="12sp"
                    android:text="11111111111"
                    android:textColor="#333333"
                    android:layout_weight="2"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="14sp"
                android:textColor="#333333"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="隐患治理信息："/>

            <TextView
                android:id="@+id/map_company_yh_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#aeaeae"
                android:paddingTop="4dp"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:textSize="14sp"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/map_company_yh_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#aeaeae"
                android:textSize="14sp"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"/>

        </LinearLayout>
        <Button
            android:layout_marginTop="10dp"
            android:layout_marginRight="60dp"
            android:layout_alignParentRight="true"
            android:id="@+id/map_company_to_check"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/map_button"
            android:textSize="12sp"
            android:text="@string/check"
            android:textColor="#000000" />

        <Button
            android:layout_alignLeft="@id/map_company_to_check"
            android:layout_below="@id/map_company_to_check"
            android:id="@+id/map_company_to_employee"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/map_button"
            android:textSize="12sp"
            android:text="@string/employee"
            android:textColor="#000000" />

        <Button
            android:layout_toRightOf="@id/map_company_to_employee"
            android:layout_below="@id/map_company_to_check"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/map_company_to_navi"
            android:background="@drawable/map_button"
            android:text="@string/navi"
            android:textSize="12sp"
            android:textColor="#000000" />


    </RelativeLayout>

</RelativeLayout>